--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+    <canvas class="webgl"></canvas>
     <script src="./three.min.js"></script>
     <script src="./script.js"></script>
 </body>
